Fix: Mobile animation glitch and score alignment

--- a/style.css
+++ b/style.css
@@ -317,14 +317,14 @@ h2 {
 
 /* Shake Animation for hands */
 .shake-left {
-    animation: shakeLeft 0.45s ease-in-out 3;
-    /* 0.45s * 3 = 1.35s Total Duration */
+    animation: shakeLeft 0.5s ease-in-out 3;
+    /* 0.5s * 3 = 1.5s Total Duration */
     transform-origin: 20% 80%;
     /* Pivot around wrist */
 }
 
 .shake-right {
-    animation: shakeRight 0.45s ease-in-out 3;
+    animation: shakeRight 0.5s ease-in-out 3;
     transform-origin: 80% 80%;
 }
 
@@ -423,7 +423,7 @@ h2 {
 }
 
 .series-score {
-    display: inline-block;
+    display: inline;
     /* background: #fff; Removed to fix 'square' overlay issue */
     padding: 0;
     /* Removed padding */
@@ -431,7 +431,6 @@ h2 {
     font-weight: 700;
     margin-left: 0.25rem;
     /* Reduced from 0.5rem */
-    vertical-align: middle;
     font-size: 1em;
     border: none;
 }
